# greentext

./: .gitignore  ChangeLog.md  LICENSE  README.md  greentext.cabal  package.yaml
exe/: Main.hs
src/: Ast.hs  Code.hs  Config.hs  Debug.hs  Driver.hs  Emit.hs  Gtc.hs  Interp.hs  Lexer.x  Main.hs  Parser.y  Repl.hs  Stack.hs  Utils.hs
test/: Spec.hs
