cabal-version: 1.12

name:           greentext
version:        0.1.0.0
synopsis:       Greentext interpreter in haskell
description:    Please see the README on GitHub at <https://github.com/yokodake/greentext#readme>
category:       Programming Language
homepage:       https://github.com/yokodake/greentext#readme
bug-reports:    https://github.com/yokodake/greentext/issues
author:         Yokodake
maintainer:     ngyj@cinnabar.fr
copyright:      2020 Yokodake
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    src/Lexer.x
    src/Parser.y

source-repository head
  type: git
  location: https://github.com/yokodake/greentext

library
  exposed-modules:
      Lexer
    , Parser
    , Ast
    , Code
    , Config
    , Debug
    , Driver
    , Emit
    , Gtc
    , Interp
    , Repl
    , Stack
  hs-source-dirs:
      src
  ghc-options:
  build-tools:
      alex
    , happy
  build-depends:
      array
    , base >= 4.7 && <5
    , bytestring >= 0.11 && < 0.12
    , containers
    , filepath
    , haskeline
    -- required for MonadMask from haskeline API
    , exceptions
    , mtl
    , transformers
  default-language: Haskell2010
  default-extensions:
      TypeApplications
    , BangPatterns
    , ScopedTypeVariables
    , NamedFieldPuns
    , DerivingVia

  if os(windows) {
    build-depends: Win32 < 2.10
  }

executable gt
  main-is: Main.hs
  hs-source-dirs:
    exe
  default-language: Haskell2010
  build-depends:
      base >= 4.7 && <5
    , greentext
  ghc-options: -threaded -Wall

test-suite greentext-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , greentext
    , hspec
  default-language: Haskell2010
